<resources>

    <string name="app_name">Sunshine</string>

    <string name="action_settings">Settings</string>

    <!-- Menu label to fetch updated weather info from the server -->

    <string name="action_refresh" translatable='false'>Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!--Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreference [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!--Default postal code for location preference[CHAR LIMIT=NONE] -->
    <string name="pref_location_default">94538</string>


    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="action_map">Map Location</string>

    <string name="action_share">Share</string>
</resources>
